@@ -8,23 +8,17 @@ DIST gmock-1.5.0.tar.bz2 1283432 SHA256 d8689a51fbc13f55509f5842fe7d514839d9fd60
 DIST gmock-1.6.0.zip 2053682 SHA256 341ad07c31c619ba32c88c2265bc23693da1df062f47f146a7ed340f646d82b7 SHA512 7adff00bb6ff81a6ffb704be71d0747636d69e24b4a8b709e1fb8c177a9a47f6dea8d14fde73034ebfb1529c291c7212a944ad92a34f88abdfe23c2d0b11b6f7 WHIRLPOOL 1a03ff8f2d96287f5deb24f970688f20f3480e77a4a71089ef1399a87f28f616bf0feaedc217e7ac1ca8ca1246e53f5d882f350704be111ae547961949939530
 EBUILD gmock-1.4.0.ebuild 900 SHA256 ac6459b47610fabc4a1976a27b813a5d60bc2ed94b053e0f0f95eaa9317f2919 SHA512 dc4bd30c218906d7a43798dc4393d6b9201328185d6dc5e5fa591ec44419b71814d759e9061b2b7125d1efb41e670e9680c6ccd50be1835e7ae496020a5b6d33 WHIRLPOOL ebec651a934b28ecc628f6abfb3ebea8442b2eb572b5cd4cfafd86f1286454afff51de5260f0d5afe75253a52788b08253af08d7274283df52a7e9bef0b0b89c
 EBUILD gmock-1.5.0.ebuild 801 SHA256 da8e3eb98f7fc07b8909373b612700c8a861c5c92bb48ee27c5addf787848657 SHA512 d1813c15ecc635418c859f69ba49c4ff401daf56bef042d9d8e8abc1f072421af04579f0aea4e4ad6c650b60aaa2f1ccea65bd295a298f0cce5c3cfd5f9ddd52 WHIRLPOOL 47ed5fafcb25a3414bb06c8eb27688c571b42e7b52f84089414e82ac8944b736a66698023b9dd81d3201316af07fe5056c6741e925f185c85efaaa0bccf4dcaf
-EBUILD gmock-1.6.0.ebuild 952 SHA256 1b99c8807a5d5c5b38729537979939171d24a64adfa08c146b3065759d7047ae SHA512 c8724c4c71173c54a48af457a76f3176fdb207d2122d05d3fb64a1a3a1211224e8687e28a9f17b16e3c89faf77dbf655c4f4408034e3d08d11d906671722e755 WHIRLPOOL df440ef467c415e8875e1cb760edba9c239738897b0b583aa13cef8fde94489b9e9c2ea75e386c88d0bf6ec8a0953a7331125e3eaae705bd77b5b794af82fda7
-MISC ChangeLog 2065 SHA256 e0d96b7d602c1f0d2b17247dbef486cba23265ec1f6243ab430396b633ce4367 SHA512 8fe61ffb39484909d3d85a6c2d3db12b919091be84d5542c5845f7e36dad0e2a0787171fd3c15c044452f1d1e96aa7b0e3fd1425c3c078dbb9bd1d9b51beba9f WHIRLPOOL 55e9e1b40dd198cd828bd3f19abdb6a62d6e977c6106a6c1af1752189f79769e6caf9d65ebb2570ff67e410f5317e2955668b75042e389775bf1d00b1abacc5f
+EBUILD gmock-1.6.0.ebuild 956 SHA256 f5644a255b1c3787dccc7dfaace6f618a7757b10a6b99ffbccf7c7d5ac4d0623 SHA512 64d1c72768d9f96ec4cb16418a0e150365097969fc4ff43087f2ee18d62985db87d4e1c27d4afe87177e20c7f498b37e4ce72fc1bed4d0eb9e71dbbb7832e767 WHIRLPOOL e63fd6800be7d44435f835748e3ce5ed2e1f87359a796cdfa9269c0f05464416b61af8b77cebad52ded101f45e3b4df79a54ab9e2585f78980b66dba482c0a03
+MISC ChangeLog 2171 SHA256 3328494023c0e6054eb41d6d86105896d88cc618d2512b6598d9c37dcd1b7097 SHA512 355487adbd09843e2711a414368044daf2dc77893ed0b2624fd9ad538bacc29e29f703e9c82947eabdd0c665b00c50b8470a69329ce4464d681567a0368a82d3 WHIRLPOOL d84a8722dae4416b533a217b50ab2a70f31ad096242ff3fcbf8fb53bffeaecbf319a226ca892d6e85481f148f401b3e95677c30d1c14985ee9ba147edb3d835d
 MISC metadata.xml 283 SHA256 c34e015327f31293e860e8b2366e59e1d361c67f47d1c2cb010e16f43521a0f2 SHA512 e85ed05e67750a75476066754448e724ab3e65c91af152befff80c7f66423254311243fa213ba282bcc6456499964d4c969103cad829d8386ab3ef50138b5b81 WHIRLPOOL 3c504418a30332c69ad4282d204ff0ffeef35bc0aff4071d0c7f51704e7a1e091ce7e72826de354f8d1ded20920d61fa60bee4fafd3db8bd43acb9cdce9717bf
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQPT22AAoJELEHsLL7fEFWNVQP/2FAoEQ7kH6GmIs3gU2hn799
-jey2RtJzPpktsgfsZOx0hadUCCpu2zRO/TQwS2Nq4HgXOa2SE4CBWvdND3VcapHW
-RaxvrVsQa5EvhLL2974ObBDu3Fh8ma1od2dFkAhylWhuC3O/MUfd4uWtAFZWqlWo
-Yb2eLJlNZQVdWfpZzZVCmNytwv0ypWlLPUXdP4cOej5/ay4FB8lqTJ4p3Prhy79x
-oUwzu+HlkJeAzBcL37rNSf1IpxoeSNpU2i8Yf5ji/A5B6QDII6qqQrBI26B6zzHR
-lznNREJdrUlCQIn3e7KUqaip9fGIBNQ5QT4G16dQlUtSbzmf2sFIJc8p7baKVU+O
-+iKj4+bwfce0J5H/H6Zicw5/9ChTgIEV7xj2vaW3hZuvDg4Lks/IsQDwyE7W9V8I
-tTswsK0Q3Tyd9WO1AitWhSSvhoqHvyTo4c/Zi7ULI768mrnCNOpBtzpMLJ5Jw1Hg
-p904W+OThDkbjRLacI+6kiXaJu9vgbMnHeo5a82YeTpy+zSyQQUz5Rcgg/pEusn4
-CFGHrJCXHbVVVaAF9ubRbhVIZ+sFTerHvAjavhduorzJyZQOCDsppCLheVqhnsm7
-El0arTU68RCjnQNZnJ7/3CqSkp0kBSzvlzN512d3lCNDYX4umJXyqqaCSioNe34b
-3HDWCUhAX4PTeo6aEaJz
-=Wkgz
+iQEcBAEBCAAGBQJSAhubAAoJECo/aRed9267g3MH/j392gv4QJH+N6NA8oyrYDNp
+0GuyYKc0RAfXopRZkqW3JQygIaAWzQwR8spPp+WwkD9srvsvshCOM2fZTJtyPSag
+s++H291B1J3AXZnJsKOQNVFHx9IMQH4UghNVkl3YGuX6ft7uddR16XF9+e6v4Mkh
+CPx9uP1Dv4EHwwRUS9+s8sy1bneh5szISoM6FRC9bs/imLPIfY85IOpwacd92r9F
+59hwHMIhyDeSWcC+C4GGbsWmb/rP6weZpF9Fpe6e3oeh6vC0HBXJYd8w4kjCxbJq
+AVPz3L5j+iOpcSPDNmw0YvzwWs3T9h24repkVCmxec76oj6Vdk1Z+Mub9sQkVNk=
+=kyzj
 -----END PGP SIGNATURE-----
