@@ -1,6 +1,9 @@
 # ChangeLog for dev-cpp/gmock
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/gmock/ChangeLog,v 1.14 2012/08/28 21:52:08 vapier Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/gmock/ChangeLog,v 1.15 2013/08/07 10:05:33 pinkbyte Exp $
+
+  07 Aug 2013; Sergey Popov <pinkbyte@gentoo.org> gmock-1.6.0.ebuild:
+  Stable on arm, wrt bug #478210
 
   28 Aug 2012; Mike Frysinger <vapier@gentoo.org>
   +files/gmock-1.4.0-more-gcc-4.7.patch, gmock-1.4.0.ebuild:
